[package]
name = "pallet-blocktime-rpc"
version = "2.0.1"
authors = ['Rafal Piotrowski']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
serde = { version = "1.0.101", features = ["derive"], optional = true }

sp-rpc = { version = '2.0.1', default-features = false}
sp-runtime = { version = '2.0.1', default-features = false}
sp-blockchain = { version = '2.0.1', default-features = false}
sp-api = { version = '2.0.1', default-features = false }

pallet-blocktime-runtime-api = { version = "2.0.1", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-runtime/std",
  "sp-api/std",
  "pallet-blocktime-runtime-api/std",
]
